--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "node-fetch": "^3.2.5",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "dotenv": "^16.0.1"
   }
 }
